# sp5

./: .gitignore  CMakeLists.txt  README.md
Scripts/: FindSDL2_mixer.cmake
Sources/: main.cpp
Sources/hdr/: Ball.h  CMain.h
Sources/src/: Ball.cpp  CMain.cpp
propriate_task_U_1/: CMakeLists.txt
propriate_task_U_1/Sources/: main_1.cpp  main_2.cpp
propriate_task_U_2/Sources/: main_1.cpp
propriate_task_U_3/: CMakeLists.txt
propriate_task_U_3/Sources/: main_1.cpp
